--- a/components/fum2cs6et-python/overlays/development/deployment-patch.yaml
+++ b/components/fum2cs6et-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: fum2cs6et-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-aa39002986.ur7n.p3.openshiftapps.com/rhtap/rhtap-qe-python:a4bcd54ba7bbec563d19ecb4673f5aaa66b61059@sha256:18d937a49e37d9805edd4303b2b1c49859db382bc2efa0ad26fe815c2d504473
+          name: container-image
